--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -6,10 +6,10 @@
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".MainActivity"
-android:layout_weight="10"
+    android:layout_weight="10"
     tools:showIn="@layout/activity_main">
 
-    <ListView
+    <android.support.v7.widget.RecyclerView
         android:id="@+id/list_up"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -20,7 +20,6 @@ android:layout_weight="10"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
-        app:layout_constraintVertical_weight="9"
         android:paddingBottom="90dp"
         android:clipToPadding="false"
         />
