--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,10 +8,10 @@
     <color name="navyBlue">#2d3142</color>
     <color name="silver">#bfc0c0</color>
     <color name="white">#ffffff</color>
-    <color name="orange">#ef8354</color>
+    <color name="orange">#34394d</color>
     <color name="lightBlue">#383c51</color>
     <color name="darkBlue">#20232f</color>
-    <color name="outdated">#b6b6b6</color>
+    <color name="outdated">#dbdbdb</color>
 
 
 </resources>
