--- a/app/src/main/res/layout/activity_plan.xml
+++ b/app/src/main/res/layout/activity_plan.xml
@@ -7,192 +7,170 @@
     tools:context=".PlanActivity">
 
 
-    <Spinner
-        android:id="@+id/spinner"
-        style="@style/MySpinnerLook"
-        android:layout_width="225dp"
-        android:layout_height="25dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="8dp"
-        android:textColor="#000"
-        android:theme="@style/MySpinnerLook"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.903"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="22dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:text="Subject:"
-        android:textColor="#000"
-        android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="@+id/spinner"
-        app:layout_constraintEnd_toStartOf="@+id/spinner"
-        app:layout_constraintHorizontal_bias="0.369"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
-
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="89dp"
-        android:layout_height="30dp"
-        android:layout_marginTop="16dp"
-        android:text="Description:"
-        android:textColor="#000"
-
-        android:textSize="16sp"
-        app:layout_constraintEnd_toStartOf="@+id/editText"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/textView"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
-
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="30dp"
-        android:layout_marginTop="28dp"
-        android:layout_marginEnd="8dp"
-
-        android:text="Deadline:"
-        android:textColor="#000"
-        android:textSize="16sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/textView2"
-        app:layout_constraintTop_toBottomOf="@+id/editText" />
-
     <EditText
         android:id="@+id/editText"
-        android:layout_width="227dp"
-        android:layout_height="73dp"
-        android:layout_marginTop="32dp"
+        android:layout_width="331dp"
+        android:layout_height="107dp"
+        android:layout_marginTop="60dp"
         android:background="@drawable/roundinputlarge"
+        android:elevation="3dp"
         android:fontFamily="@font/nslight"
         android:gravity="top|left"
-        android:maxLength="50"
+        android:maxLength="100"
         android:maxLines="4"
         android:paddingTop="-20dp"
         android:singleLine="false"
-
         android:textColor="#000"
         android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="@+id/spinner"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="@+id/spinner"
-        app:layout_constraintTop_toTopOf="@+id/spinner" />
-
-    <CalendarView
-        android:id="@+id/calendarView"
-        android:layout_width="246dp"
-        android:layout_height="304dp"
-        android:layout_marginTop="28dp"
-        android:background="@color/navyBlue"
-        android:clipToPadding="false"
-
-
-        android:minDate=""
-        android:weekDayTextAppearance="@color/white"
-        app:layout_constraintEnd_toEndOf="@+id/spinner"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="@+id/editText"
-        app:layout_constraintTop_toBottomOf="@+id/editText"
-
-
-        />
-
-    <Button
-        android:id="@+id/button"
-        android:layout_width="106dp"
-        android:layout_height="45dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        android:background="@drawable/roundedbutton"
-        android:fontFamily="@font/nssbold"
-        android:text="Add"
-        android:textColor="@color/white"
-        android:visibility="visible"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/calendarView"
-        app:layout_constraintVertical_bias="0.95" />
-
-    <Button
-        android:id="@+id/btncancel"
-        android:layout_width="106dp"
-        android:layout_height="45dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        android:background="@drawable/roundedbutton"
-        android:fontFamily="@font/nssbold"
-        android:text="Cancel"
-        android:textColor="@color/white"
-        android:visibility="visible"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/button"
-        app:layout_constraintTop_toBottomOf="@+id/calendarView"
-        app:layout_constraintVertical_bias="0.952" />
-
-    <TextView
-        android:id="@+id/maxchar3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:text="TextView"
-        android:textColor="@color/silver"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.931"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText" />
-
-    <Button
-        android:id="@+id/nopt_btn"
-        android:layout_width="106dp"
-        android:layout_height="45dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        android:background="@drawable/roundedbutton_grey"
-        android:fontFamily="@font/nssbold"
-        android:text="Notifying"
-        android:textColor="#fff"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/button"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/calendarView"
-        app:layout_constraintVertical_bias="0.95" />
+        app:layout_constraintTop_toBottomOf="@+id/spinner" />
 
     <ImageButton
         android:id="@+id/qrcodeAddButton"
         android:layout_width="70dp"
         android:layout_height="69dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
         android:background="@null"
+        android:elevation="10dp"
         android:scaleType="centerCrop"
         android:visibility="visible"
-        app:layout_constraintBottom_toBottomOf="@+id/calendarView"
-        app:layout_constraintEnd_toEndOf="@+id/textView3"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="@+id/textView3"
-        app:layout_constraintTop_toBottomOf="@+id/textView3"
-        app:layout_constraintVertical_bias="0.43"
+        app:layout_constraintBottom_toBottomOf="@+id/calendarSHOW"
+        app:layout_constraintEnd_toEndOf="@+id/editText"
+        app:layout_constraintTop_toTopOf="@+id/calendarSHOW"
         app:srcCompat="@drawable/qrcodejpg" />
+
+    <ImageButton
+        android:id="@+id/calendarSHOW"
+        android:layout_width="62dp"
+        android:layout_height="58dp"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/roundedbutton_grey"
+        android:elevation="10dp"
+        android:padding="10dp"
+        android:scaleType="fitCenter"
+
+        app:layout_constraintStart_toStartOf="@+id/editText"
+        app:layout_constraintTop_toBottomOf="@+id/maxchar3"
+        app:srcCompat="@drawable/calendarico" />
+
+    <LinearLayout
+        android:layout_width="283dp"
+        android:layout_height="64dp"
+        android:layout_marginBottom="16dp"
+        android:gravity="center|center_vertical"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <ImageButton
+            android:id="@+id/notification_button"
+            android:layout_width="70dp"
+            android:layout_height="50dp"
+            android:background="@drawable/roundedbutton"
+            android:elevation="4dp"
+            android:fontFamily="@font/nssbold"
+            android:scaleType="fitCenter"
+            android:src="@drawable/notificationico"
+            android:text="Notifying"
+            android:textColor="#fff" />
+
+        <ImageButton
+            android:id="@+id/save_btn"
+            style="@style/Widget.AppCompat.Button"
+            android:layout_width="70dp"
+            android:layout_height="50dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:background="@drawable/roundedbutton"
+            android:elevation="4dp"
+            android:fontFamily="@font/nssbold"
+            android:scaleType="fitCenter"
+            android:src="@drawable/addico"
+            android:text="Add"
+            android:textColor="@color/white"
+            android:visibility="visible" />
+
+        <ImageButton
+            android:id="@+id/cancel_btn"
+            android:layout_width="70dp"
+            android:layout_height="50dp"
+            android:background="@drawable/roundedbutton"
+            android:elevation="4dp"
+            android:fontFamily="@font/nssbold"
+            android:scaleType="fitCenter"
+            android:src="@drawable/close"
+            android:text="Cancel"
+            android:textColor="@color/white"
+            android:visibility="visible" />
+    </LinearLayout>
+
+    <Spinner
+        android:id="@+id/spinner"
+        style="@style/MySpinnerLook"
+        android:layout_width="246dp"
+        android:layout_height="34dp"
+        android:background="@drawable/roundinputlarge"
+
+        android:textColor="#000"
+        android:theme="@style/MySpinnerLook"
+        app:layout_constraintEnd_toEndOf="@+id/editText"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/editText"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="22dp"
+        android:layout_marginTop="16dp"
+        android:text="Subject:"
+        android:textColor="#000"
+        android:textSize="16sp"
+        app:layout_constraintStart_toStartOf="@+id/spinner"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="89dp"
+        android:layout_height="30dp"
+        android:text="Description:"
+
+        android:textColor="#000"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toTopOf="@+id/editText"
+        app:layout_constraintStart_toStartOf="@+id/editText" />
+
+    <TextView
+        android:id="@+id/maxchar3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TextView"
+        android:textColor="@color/silver"
+        app:layout_constraintEnd_toEndOf="@+id/editText"
+        app:layout_constraintTop_toBottomOf="@+id/editText" />
+
+    <TextView
+        android:id="@+id/currentDateTV"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:elevation="5dp"
+        android:text="TextView"
+        android:textColor="@color/silver"
+        app:layout_constraintBottom_toBottomOf="@+id/calendarSHOW"
+        app:layout_constraintStart_toEndOf="@+id/calendarSHOW"
+        app:layout_constraintTop_toTopOf="@+id/calendarSHOW" />
+
+    <ImageView
+        android:id="@+id/imageView4"
+        android:layout_width="34dp"
+        android:layout_height="28dp"
+
+        android:tint="@color/navyBlue"
+        app:layout_constraintBottom_toBottomOf="@+id/spinner"
+        app:layout_constraintEnd_toEndOf="@+id/spinner"
+        app:layout_constraintTop_toTopOf="@+id/spinner"
+        app:srcCompat="@drawable/dropdownico" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
